<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ConfigurationFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/config_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/fragment_config_btnSelect"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/seleccionar_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fragment_config_btnCreate"
            app:layout_constraintTop_toBottomOf="@+id/config_perfil" />

        <Button
            android:id="@+id/fragment_config_menuback"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:text="@string/volver_menu"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/fragment_config_btnCreate"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/config_rl"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/crear_perfil"
            app:layout_constraintEnd_toStartOf="@+id/fragment_config_btnSelect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/config_perfil" />

        <Button
            android:id="@+id/fragment_config_setchanges"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:text="@string/aplicar_cambios"
            android:textColor="#fff"
            app:layout_constraintBottom_toTopOf="@+id/fragment_config_menuback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/fragment_config_btn_delete"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/config_rl"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="60dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/borrar_perfil"
            app:layout_constraintBottom_toTopOf="@+id/fragment_config_setchanges"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_config_btnSelect" />

        <TextView
            android:id="@+id/config_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:background="@color/cancelColor"
            android:gravity="center"
            android:text="@string/configuracion"
            android:textColor="@color/title_textColor"
            android:textSize="30sp"
            android:paddingVertical="10dp"
            app:layout_constraintBottom_toTopOf="@+id/config_difficulty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/config_difficulty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/dificultad"
            android:textColor="#fff"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/config_sp_dif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/config_title" />

        <Spinner
            android:id="@+id/config_sp_dif"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:background="@color/spinner_color"
            android:gravity="center"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toTopOf="@+id/config_modes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/config_difficulty" />

        <TextView
            android:id="@+id/config_modes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/modo_de_juego"
            android:textColor="#fff"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/config_sp_mod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/config_sp_dif" />

        <Spinner
            android:id="@+id/config_sp_mod"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/spinner_color"
            android:gravity="center"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/config_perfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/config_modes" />

        <TextView
            android:id="@+id/config_perfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="271dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/perfil_de_usuario"
            android:textColor="#fff"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/config_sp_mod" />


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>