<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.IntroActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/Screen_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradiente"
            android:contentDescription="@string/photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/quiz_background2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="62dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/cancelColor"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/Screen_background">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_intro"
                        android:layout_width="313dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="13dp"
                        android:layout_marginRight="13dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/debe_seleccionar_un_perfil_para_continuar"
                        android:textColor="@android:color/background_dark"
                        android:textSize="22sp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp">

            <Button
                android:id="@+id/frg_btn_cu_config"
                android:layout_width="157dp"
                android:layout_height="61dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:background="@color/colorAccent"
                android:text="@string/configuracion"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btn_introVolver"
                android:layout_width="157dp"
                android:layout_height="61dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:background="@color/colorAccent"
                android:text="@string/volver"
                android:textColor="#fff" />

        </RelativeLayout>

    </RelativeLayout>




</android.support.constraint.ConstraintLayout>