<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente"
    tools:context=".activities.InterfaceActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_configuracion"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/cv_exit"
            android:layout_alignLeft="@+id/cv_exit">

            <Button
                android:id="@+id/btn_interf_configuracion"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="274dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0px"
                android:gravity="center"
                android:text="@string/configuracion"
                android:textSize="24sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_exit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/cv_configuracion"
            android:layout_alignLeft="@+id/cv_configuracion">

            <Button
                android:id="@+id/btn_interfSalir"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="274dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="@string/exit"
                android:textSize="24sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="269dp"
        android:layout_height="184dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/logo_urjc"
        app:srcCompat="@drawable/logo_urjc" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv_startgame"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_startgame"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="274dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/start_quiz"
                android:textSize="24sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>