<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.CreateUserFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeLayout">

        <ImageView
            android:id="@+id/Screen_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradiente"
            android:contentDescription="@string/photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="567dp"
            tools:layout_conversion_absoluteWidth="384dp" />


        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:cardBackgroundColor="@color/cancelColor"
            android:layout_marginHorizontal="15dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toTopOf="@+id/Screen_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="43dp"
            tools:layout_conversion_absoluteWidth="200dp">


            <TextView
                android:id="@+id/txt_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="@string/inserte_nombre"
                android:textColor="@android:color/background_dark"
                android:textSize="22sp"
                tools:layout_conversion_absoluteHeight="30dp"
                tools:layout_conversion_absoluteWidth="178dp"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="27dp" />


        </android.support.v7.widget.CardView>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:layout_conversion_absoluteHeight="56dp"
            tools:layout_editor_absoluteY="73dp"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_conversion_absoluteWidth="283dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_playerName"
                style="@android:style/Animation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:hint="@string/nombre_jugador"
                android:inputType="text"
                android:singleLine="false"
                android:textColor="@android:color/background_light"
                android:typeface="sans"
                android:gravity="center"
                tools:layout_conversion_absoluteHeight="46dp"
                tools:layout_conversion_absoluteWidth="283dp"
                tools:layout_editor_absoluteX="51dp"
                tools:layout_editor_absoluteY="73dp" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/frg_btn_cu_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp"
            android:paddingHorizontal="10dp"
            android:background="@color/colorAccent"
            android:text="@string/crear_perfil"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Screen_background"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_conversion_absoluteHeight="61dp"
            tools:layout_conversion_absoluteWidth="157dp" />

        <Button
            android:id="@+id/frg_btn_cu_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="50dp"
            android:background="@color/colorAccent"
            android:text="@string/volver"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/frg_btn_cu_config"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Screen_background"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_conversion_absoluteHeight="61dp"
            tools:layout_conversion_absoluteWidth="157dp" />

        <Button
            android:id="@+id/frg_btn_cu_fotoPerfil"
            android:layout_width="171dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="130dp"
            android:background="@color/cancelColor"
            android:text="@string/foto_perfil"
            android:textColor="@color/title_textColor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/Screen_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frg_cu_imageView_userPhoto"
            tools:layout_conversion_absoluteHeight="61dp"
            tools:layout_conversion_absoluteWidth="157dp" />

        <ImageView
            android:id="@+id/frg_cu_imageView_userPhoto"
            android:layout_width="209dp"
            android:layout_height="187dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:src="@tools:sample/avatars[3]" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>